--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,48 @@
-name: deploy to lambda
-on: [push]
+name: Push CI
+
+on:
+  push:
+    branches: [ master ]
+  
 jobs:
-  deploy_source:
-    name: build and deploy lambda
-    strategy:
-      matrix:
-        node-version: [12.x]
+  build:
+    name: build node
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-      - name: sam build
-        uses: youyo/aws-sam-action/python3.8@master
-        with:
-          sam_command: build
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
-      - name: sam deploy
-        uses: youyo/aws-sam-action/python3.8@master
-        with:
-          sam_command: 'deploy --no-fail-on-empty-changeset'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
-          function_name: tfm-aws-lambda
-          zip_file: bundle.zip
+    - uses: actions/checkout@v2
+    - name: Set up Node 12
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12'
+    - name: Run npm install
+    - run: npm install
+  
+  build_sam:
+    name: Build Lambda with AWS SAM  
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:  
+    - name: Checkout
+      uses: actions/checkout@master
+    - name: sam build
+      uses: youyo/aws-sam-action/python3.8@master
+      with:
+        sam_command: build
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+  
+  deploy_sam:
+    name: Deploy Lambda with AWS SAM
+    runs-on: ubuntu-latest
+    needs: [build_sam]
+    steps:
+    - name: Checkout
+      uses: youyo/aws-sam-action/python3.8@master
+      with:
+        sam_command: 'deploy --no-fail-on-empty-changeset'
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
