--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Node 12
-    - uses: actions/setup-node@v1
+      uses: actions/setup-node@v1
       with:
         node-version: '12'
     - name: Run npm install
