--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,7 @@ jobs:
       with:
         node-version: '12'
     - name: Run npm install
-      run: npm install
+      run: |
+        cd src
+        npm install
+        cd ..
