MODIFIED: Deleted src folder and moved all files to root directory.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,7 @@ jobs:
       with:
         node-version: '12'
     - name: Run npm install
-      run: |
-        cd src
-        npm install
-        cd ..
+      run: npm install
     - name: Checkout
       uses: actions/checkout@master
     - name: sam build
