--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
     - name: sam build
-      uses: youyo/aws-sam-action/python3.8@master
-      with:
-        sam_command: build
+      uses: r0zar/sam-deploy-action@v1.0
       env:
+        TEMPLATE: 'template.yaml'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
