--- a/node12/Dockerfile
+++ b/node12/Dockerfile
@@ -5,5 +5,6 @@ ENV SAM_CLI_TELEMETRY 0
 RUN apk --update --no-cache add jq curl bash gcc musl-dev
 
 COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
