--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
   
 jobs:
-  build:
+  setup_node:
     name: build node
     runs-on: ubuntu-latest
     steps:
@@ -20,14 +20,32 @@ jobs:
         cd src
         npm install
         cd ..
+
+  build_sam:
+    name: Build Lambda with AWS SAM  
+    runs-on: ubuntu-latest
+    needs: [setup_node]
+    steps:  
     - name: Checkout
       uses: actions/checkout@master
     - name: sam build
-      uses: | 
-        actions/setup-node@v1
-        Gabriel-Acevedo/tfm-aws/node12@master
+      uses: youyo/aws-sam-action/python3.8@master
       with:
         sam_command: build
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+  
+  deploy_sam:
+    name: Deploy Lambda with AWS SAM
+    runs-on: ubuntu-latest
+    needs: [build_sam]
+    steps:
+    - name: Checkout
+      uses: youyo/aws-sam-action/python3.8@master
+      with:
+        sam_command: 'deploy --no-fail-on-empty-changeset'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
