--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
     - name: sam build
-      uses: youyo/aws-sam-action/python3.8@master
+      uses: Gabriel-Acevedo/tfm-aws/node12@master
       with:
         sam_command: build
       env:
@@ -43,9 +43,9 @@ jobs:
     needs: [build_sam]
     steps:
     - name: Checkout
-      uses: youyo/aws-sam-action/python3.8@master
+      uses: Gabriel-Acevedo/tfm-aws/node12@master
       with:
-        sam_command: 'deploy --no-fail-on-empty-changeset'
+        sam_command: 'deploy'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
