--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [setup_node]
     steps:  
-    - name: Checkout
-      uses: actions/checkout@master
-    - name: sam build
+    - name: SAM Build
       uses: Gabriel-Acevedo/tfm-aws/node12@master
       with:
         sam_command: build
@@ -42,10 +40,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_sam]
     steps:
-    - name: Checkout
+    - name: SAM Deploy
       uses: Gabriel-Acevedo/tfm-aws/node12@master
       with:
-        sam_command: 'deploy'
+        sam_command: 'deploy --tfm-aws-lambda'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
