--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [setup_node]
     steps:  
+    - name: Checkout
+      uses: actions/checkout@master
     - name: SAM Build
       uses: Gabriel-Acevedo/tfm-aws/node12@master
       with:
@@ -40,6 +42,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_sam]
     steps:
+    - name: Checkout
+      uses: actions/checkout@master
     - name: SAM Deploy
       uses: Gabriel-Acevedo/tfm-aws/node12@master
       with:
