--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     - name: SAM Deploy
       uses: Gabriel-Acevedo/tfm-aws/node12@master
       with:
-        sam_command: 'deploy --tfm-aws-lambda'
+        sam_command: 'deploy --no-fail-on-empty-changeset'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
