MODIFIED: Added commands to install SAM CLI in linux console.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,10 @@ jobs:
         cd src
         npm install
         cd ..
+        sh -c "$(curl -fsSL https://raw.githubusercontent.com/Linuxbrew/install/master/install.sh)"
+        brew --version
+        brew tap aws/tap
+        brew install aws-sam-cli
 
   build_sam:
     name: Build Lambda with AWS SAM  
