--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,36 +24,9 @@ jobs:
         brew --version
         brew tap aws/tap
         brew install aws-sam-cli
-
-  build_sam:
-    name: Build Lambda with AWS SAM  
-    runs-on: ubuntu-latest
-    needs: [setup_node]
-    steps:  
-    - name: Checkout
-      uses: actions/checkout@master
-    - name: SAM Build
-      uses: Gabriel-Acevedo/tfm-aws/node12@master
-      with:
-        sam_command: build
+        sam build
+        sam deploy
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-  
-  deploy_sam:
-    name: Deploy Lambda with AWS SAM
-    runs-on: ubuntu-latest
-    needs: [build_sam]
-    steps:
-    - name: Checkout
-      uses: actions/checkout@master
-    - name: SAM Deploy
-      uses: Gabriel-Acevedo/tfm-aws/node12@master
-      with:
-        sam_command: 'deploy --no-fail-on-empty-changeset'
-      env:
-        TEMPLATE: 'template.yaml'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
