--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ on:
   
 jobs:
   setup_node:
-    name: build node
+    name: Setup VM
     runs-on: ubuntu-latest
     steps:
-    - name: Checkot
+    - name: Checkout
       uses: actions/checkout@v2
     - name: Set up Node 12
       uses: actions/setup-node@v1
@@ -20,11 +20,25 @@ jobs:
         cd src
         npm install
         cd ..
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        
+        
+  execute_sam:
+    name: Setup VM
+    runs-on: ubuntu-latest
+    needs: [setup_node]
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Build and Deploy SAM
+      run: |
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
-        brew --version
         sam build
         sam deploy --no-confirm-changeset
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}sam deploy
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
