--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ on:
   
 jobs:
   setup_node:
-    name: Setup VM
+    name: Setup Node 12
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Set up Node 12
+    - name: Setup Node 12
       uses: actions/setup-node@v1
       with:
         node-version: '12'
@@ -24,10 +24,11 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         
         
   execute_sam:
-    name: Setup VM
+    name: Build and Deploy SAM
     runs-on: ubuntu-latest
     needs: [setup_node]
     steps:
