--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Testing API REST
       run: |
-        curl https://ndwf2w45u3.execute-api.us-east-1.amazonaws.com/Prod/customers
+        curl https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/customers
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
