BUG: Corrected code error in release.yml file.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,16 +26,8 @@ jobs:
       - name: Get the current version
         id: get_version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
-
-  zip_files:
-    name: Zip source code
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    - name: Zip Folder
-      run: |
-        echo version=${{ jobs.release_version.steps.get_version.outputs.VERSION }}
-        zip -r release-${version}.zip . -x ".git/*" ".github/*" ".aws-sam/*"
-    - name: Release to Github
-      run: echo "Release ${{ jobs.release_version.steps.get_version.outputs.VERSION }}"
+      - name: Zip Folder
+        run: |
+          zip -r release-${{ steps.get_version.outputs.VERSION }}.zip . -x ".git/*" ".github/*" ".aws-sam/*"
+      - name: Release to Github
+        run: echo "Release ${{ steps.get_version.outputs.VERSION }}"
