--- a/template.yaml
+++ b/template.yaml
@@ -63,10 +63,10 @@ Resources:
                     Properties:
                         Path: /products
                         Method: GET
-                lambdaGetProductByCode:
+                lambdaGetProduct:
                     Type: Api
                     Properties:
-                        Path: /product/{productcode}
+                        Path: /product/{productid}
                         Method: GET
                 lambdaAddProduct:
                     Type: Api
