--- a/template.yaml
+++ b/template.yaml
@@ -54,7 +54,15 @@ Resources:
                                         -   ':'
                                         -   Ref: 'AWS::AccountId'
                                         -   ':table/customers'
-                                        
+                        -   Effect: Allow
+                            Action:
+                                -   'dynamodb:Scan'
+                                -   'dynamodb:Query'
+                                -   'dynamodb:DeleteItem'
+                                -   'dynamodb:GetItem'
+                                -   'dynamodb:PutItem'
+                                -   'dynamodb:UpdateItem'
+                            Resource:
                                 'Fn::Join':
                                     -   ''
                                     -   -   'arn:aws:dynamodb:'
@@ -99,8 +107,13 @@ Resources:
                                 -   'dynamodb:PutItem'
                                 -   'dynamodb:UpdateItem'
                             Resource:
-                                - "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/customers"
-                                - "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/products"
+                                'Fn::Join':
+                                    -   ''
+                                    -   -   'arn:aws:dynamodb:'
+                                        -   Ref: 'AWS::Region'
+                                        -   ':'
+                                        -   Ref: 'AWS::AccountId'
+                                        -   ':table/products'
     
     customerTable:
         Type: 'AWS::DynamoDB::Table'
