--- a/template.yaml
+++ b/template.yaml
@@ -46,6 +46,24 @@ Resources:
                                         -   ':'
                                         -   Ref: 'AWS::AccountId'
                                         -   ':table/customers'
+                -   Version: '2012-10-17'
+                    Statement: 
+                        -   Effect: Allow
+                            Action:
+                                -   'dynamodb:Scan'
+                                -   'dynamodb:Query'
+                                -   'dynamodb:DeleteItem'
+                                -   'dynamodb:GetItem'
+                                -   'dynamodb:PutItem'
+                                -   'dynamodb:UpdateItem'
+                            Resource:
+                                'Fn::Join':
+                                    -   ''
+                                    -   -   'arn:aws:dynamodb:'
+                                        -   Ref: 'AWS::Region'
+                                        -   ':'
+                                        -   Ref: 'AWS::AccountId'
+                                        -   ':table/companies'
                                         
     
     productFunction:
@@ -104,6 +122,22 @@ Resources:
                 ReadCapacityUnits: 5
                 WriteCapacityUnits: 5
     
+
+    companyTable:
+        Type: 'AWS::DynamoDB::Table'
+        Properties:
+            TableName: companies
+            AttributeDefinitions:
+                -   AttributeName: companyid
+                    AttributeType: S
+            KeySchema:
+                -   AttributeName: companyid
+                    KeyType: HASH
+            ProvisionedThroughput:
+                ReadCapacityUnits: 5
+                WriteCapacityUnits: 5
+
+
     productTable:
         Type: 'AWS::DynamoDB::Table'
         Properties:
@@ -117,6 +151,7 @@ Resources:
             ProvisionedThroughput:
                 ReadCapacityUnits: 5
                 WriteCapacityUnits: 5
+
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
