MODIFIED: Testing how to differentiate APIs with similar endpoints. Part2

--- a/template.yaml
+++ b/template.yaml
@@ -10,11 +10,13 @@ Resources:
                 lambdaGetAllCustomers:
                     Type: Api
                     Properties:
+                        RestApiId: getallcustomers
                         Path: /api/customers
                         Method: GET
                 lambdaGetCustomer:
                     Type: Api
                     Properties:
+                        RestApiId: getcustomer
                         Path: /api/customer/{customerid}
                         Method: GET
                 lambdaAddCustomer:
