--- a/template.yaml
+++ b/template.yaml
@@ -10,7 +10,7 @@ Resources:
                 lambdaGetAllCustomers:
                     Type: Api
                     Properties:
-                        RestApiId: '!Ref ApiGatewayApi'
+                        RestApiId: '!Ref lambdaGetAllCustomers'
                         Path: /api/customers
                         Method: GET
                 lambdaGetCustomer:
