--- a/template.yaml
+++ b/template.yaml
@@ -165,6 +165,11 @@ Resources:
                     Properties:
                         Path: /api/budget/{budgetid}
                         Method: GET
+                lambdaAddBudget:
+                    Type: Api
+                    Properties:
+                        Path: /api/{customerid}/budget
+                        Method: POST
             Policies:
                 -   Version: '2012-10-17'
                     Statement: 
@@ -184,6 +189,25 @@ Resources:
                                         -   ':'
                                         -   Ref: 'AWS::AccountId'
                                         -   ':table/budgets'
+                -   Version: '2012-10-17'
+                    Statement: 
+                        -   Effect: Allow
+                            Action:
+                                -   'dynamodb:Scan'
+                                -   'dynamodb:Query'
+                                -   'dynamodb:DeleteItem'
+                                -   'dynamodb:GetItem'
+                                -   'dynamodb:PutItem'
+                                -   'dynamodb:UpdateItem'
+                            Resource:
+                                'Fn::Join':
+                                    -   ''
+                                    -   -   'arn:aws:dynamodb:'
+                                        -   Ref: 'AWS::Region'
+                                        -   ':'
+                                        -   Ref: 'AWS::AccountId'
+                                        -   ':table/customers'
+                
     
     customerTable:
         Type: 'AWS::DynamoDB::Table'
