--- a/template.yaml
+++ b/template.yaml
@@ -23,11 +23,6 @@ Resources:
                     Properties:
                         Path: /api/customer
                         Method: POST
-                lambdaAddCompanyToCustomer:
-                    Type: Api
-                    Properties:
-                        Path: /api/customer/{customerid}/company
-                        Method: POST
             Policies:
                 -   Version: '2012-10-17'
                     Statement: 
@@ -127,6 +122,11 @@ Resources:
                     Properties:
                         Path: /api/company/{companyid}
                         Method: GET
+                lambdaAddCompany:
+                    Type: Api
+                    Properties:
+                        Path: /api/{customerid}/company
+                        Method: POST
             Policies:
                 -   Version: '2012-10-17'
                     Statement: 
@@ -146,7 +146,24 @@ Resources:
                                         -   ':'
                                         -   Ref: 'AWS::AccountId'
                                         -   ':table/companies'
-
+                -   Version: '2012-10-17'
+                    Statement: 
+                        -   Effect: Allow
+                            Action:
+                                -   'dynamodb:Scan'
+                                -   'dynamodb:Query'
+                                -   'dynamodb:DeleteItem'
+                                -   'dynamodb:GetItem'
+                                -   'dynamodb:PutItem'
+                                -   'dynamodb:UpdateItem'
+                            Resource:
+                                'Fn::Join':
+                                    -   ''
+                                    -   -   'arn:aws:dynamodb:'
+                                        -   Ref: 'AWS::Region'
+                                        -   ':'
+                                        -   Ref: 'AWS::AccountId'
+                                        -   ':table/customers'
 
     budgetFunction:
         Type: 'AWS::Serverless::Function'
