--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,18 +32,23 @@ jobs:
     name: Build and Deploy SAM
     runs-on: ubuntu-latest
     needs: [setup_node]
+    outputs:
+      output1: ${{ steps.samdeploy.outputs.test }}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Build and Deploy SAM
+      id: samdeploy
       run: |
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
         sam build
         sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
+        echo "::set-output name=test::hello"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+
       
   testing_endpoint:
     name: Testing Endpoints
@@ -55,6 +60,7 @@ jobs:
     - name: Testing API REST
       run: |
         ls 
+        echo ${{needs.job1.outputs.output1}}
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
