MODIFIED: Changed output format and added cloudformation output

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
         sam build
         sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
-        echo "::set-output name=test::hello"
+        aws cloudformation describe-stacks --stack-name mystack --query 'Stacks[0].Outputs[?OutputKey==`ApiURL`].OutputValue' --output text
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -60,7 +60,7 @@ jobs:
     - name: Testing API REST
       run: |
         ls 
-        echo ${{needs.job1.outputs.output1}}
+        echo ${{needs.execute_sam.outputs.output1}}
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
