--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,6 @@ jobs:
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
         sam build
         sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
-        aws cloudformation describe-stacks --stack-name tfm-aws-lambda --query 'Stacks[0].Outputs[?OutputKey==`ApiURL`].OutputValue' --output text
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -55,12 +54,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [execute_sam]
     steps:
-    - name: Checkout
+    - name: Checkout and verify endpoint testing
       uses: actions/checkout@v2
-    - name: Testing API REST
+      run: echo ${{ secrets.AWS_EXECUTE_TEST }}
+    - if: ${{ secrets.AWS_EXECUTE_TEST }} == 'Y'
+      name: Testing API REST
       run: |
-        ls 
-        echo ${{needs.execute_sam.outputs.output1}}
+        curl -v ${{ secrets.AWS_REST_API_ENDPOINT }}/api/customers 
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
