--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,10 @@ jobs:
     name: Build and Deploy SAM
     runs-on: ubuntu-latest
     needs: [setup_node]
-    outputs:
-      output1: ${{ steps.samdeploy.outputs.test }}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Build and Deploy SAM
-      id: samdeploy
       run: |
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
         sam build
@@ -57,8 +54,8 @@ jobs:
     - name: Checkout and verify endpoint testing
       uses: actions/checkout@v2
       run: echo ${{ secrets.AWS_EXECUTE_TEST }}
+    - name: Testing API REST
     - if: ${{ secrets.AWS_EXECUTE_TEST }} == 'Y'
-      name: Testing API REST
       run: |
         curl -v ${{ secrets.AWS_REST_API_ENDPOINT }}/api/customers 
       env:
