MODIFIED: Changed code in mian.yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,9 @@ jobs:
     needs: [execute_sam]
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v2      
     - name: Testing API REST
+      if: ${{ secrets.AWS_EXECUTE_TEST }} == 'Y'
       run: |
         curl -v ${{ secrets.AWS_REST_API_ENDPOINT }}/api/customers 
       env:
