--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,9 +55,10 @@ jobs:
       uses: actions/checkout@v2      
     - name: Testing API REST
       run: |
-        if ${{ secrets.AWS_EXECUTE_ENDPOINT_TEST }} == 'Y' 
-        then curl -v ${{ secrets.AWS_REST_API_ENDPOINT }}/api/customers 
-        else echo 'Execute AWS Endpoint Tests is set to NO.' 
+        if (${{ secrets.AWS_EXECUTE_ENDPOINT_TEST }} == 'Y') then 
+          curl -v ${{ secrets.AWS_REST_API_ENDPOINT }}/api/customers 
+        else 
+          echo 'Execute AWS Endpoint Tests is set to NO.' 
         fi
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
