--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,9 @@ jobs:
       uses: actions/checkout@v2      
     - name: Testing API REST
       run: |
-        if (${{ secrets.AWS_EXECUTE_ENDPOINT_TEST }} == 'Y') then 
+        endpoint=${{ secrets.AWS_EXECUTE_ENDPOINT_TEST }}
+        if ( $endpoint == 'Y') 
+        then 
           curl -v ${{ secrets.AWS_REST_API_ENDPOINT }}/api/customers 
         else 
           echo 'Execute AWS Endpoint Tests is set to NO.' 
