--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,16 +27,34 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   
-  testing_endpoint:
-    name: Testing Endpoints
+  execute_sam:
+    name: Build and Deploy SAM
     runs-on: ubuntu-latest
+    needs: [setup_node]
     steps:
     - name: Checkout
-      uses: actions/checkout@v2      
-    - name: Testing API REST
+      uses: actions/checkout@v2
+    - name: Build and Deploy SAM
       run: |
-        curl -v ${{ secrets.AWS_REST_API_ENDPOINT }}/api/customers 
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+        sam build
+        sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+
+# Commenting this line for the moment:
+#  testing_endpoint:
+#    name: Testing Endpoints
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name: Checkout
+#      uses: actions/checkout@v2      
+#    - name: Testing API REST
+#      run: |
+#        curl -v ${{ secrets.AWS_REST_API_ENDPOINT }}/api/customers 
+#      env:
+#        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
